# PAROL6_GZ_RL

src/parol6_bringup/: CMakeLists.txt  package.xml
src/parol6_bringup/launch/: draw_real_robot.launch.py  draw_simulated.launch.py  hand_real_hardware.launch.py  hand_simulated.launch.py  real_hardware.launch.py  simulated_robot.launch.py
src/parol6_controller/: CMakeLists.txt  micro_ros_controller.xml  package.xml  parol6_controller.xml
src/parol6_controller/config/: parol6_controllers.yaml
src/parol6_controller/include/parol6_controller/: micro_ros_interface.hpp  parol6_interface.hpp
src/parol6_controller/launch/: controller.launch.py
src/parol6_controller/src/: micro_ros_interface.cpp  parol6_interface.cpp
src/parol6_description/: CMakeLists.txt  package.xml
src/parol6_description/launch/: display.launch.py  gazebo.launch.py  gz_sim.launch.py
src/parol6_description/meshes/: L1.dae  L2.dae  L3.dae  L4.dae  L5.dae  L6.dae  base_link.dae
src/parol6_description/rviz/: display.rviz  path.rviz
src/parol6_description/urdf/: parol6.gazebo.xacro  parol6.ros2_control.xacro  parol6.urdf.xacro
src/parol6_drawing/: package.xml  setup.cfg  setup.py
src/parol6_drawing/parol6_drawing/: path_tracker.py  robot_draw.py  robot_draw_using_gui.py  web_gui.py
src/parol6_drawing/svg_files/: krishna (copy).xml
src/parol6_gui/: CMakeLists.txt  package.xml
src/parol6_gui/launch/: parol6_flask.launch.py
src/parol6_gui/parol6_gui/: moveit_ik_solver.py
src/parol6_gui/templates/: index.html  index_try.html  svg_index.html
src/parol6_hand_mov/: package.xml  setup.cfg  setup.py
src/parol6_hand_mov/parol6_hand_mov/: hand_move.py  mmpose_hand_move.py
src/parol6_inference/: CMakeLists.txt  README.md  README_PYTORCH_DEPLOYMENT.md  SIM_TO_SIM_DEBUGGING.md  package.xml
src/parol6_inference/launch/: parol6_inference.launch.py
src/parol6_inference/parol6_inference/: interactive_goal_setter.py  observation_publisher.py  policy_inference.py
src/parol6_inference/policy/: create_default_norm.py  policy.onnx  policy.pt
src/parol6_inference/scripts/: collect_obs_stats.py  compare_observations.py  diagnose_observations.py  test_policy_directly.py
src/parol6_moveit/: CMakeLists.txt  package.xml
src/parol6_moveit/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  parol6.srdf
src/parol6_moveit/launch/: moveit.launch.py  moveit_flask.launch.py
