<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>parol6_gui</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gunesh_pop_nvidia@todo.todo">gunesh_pop_nvidia</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- Python dependencies -->
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-flask</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
