<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>parol6_hand_mov</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gunesh_pop_nvidia@todo.todo">gunesh_pop_nvidia</maintainer>
  <license>TODO: License declaration</license>

  
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>builtin_interfaces</depend>
    
  <exec_depend>python3-opencv</exec_depend>          <!-- for cv2 -->
  <exec_depend>python3-numpy</exec_depend>           <!-- for numpy -->
  <exec_depend>ros-$ROS_DISTRO-cv-bridge</exec_depend> <!-- for CvBridge -->
  <exec_depend>python3-mediapipe</exec_depend>       <!-- for mediapipe -->


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
